<resources>
    <string name="app_name">Covid 19 Tracker</string>
    <string name="home_notice_corona"> \"Patuhi himbauan pemerintah dan tetap jaga kesehatan serta kebersihan selalu yah!\"</string>
    <string name="home_ciri_corona">Ketahui Ciri - ciri Virus Korona</string>
    <string name="home_did_you_know_corona">Ketahui Beda Gejala Virus Corona dengan Flu Biasa</string>
    <string name="home_to_protect_from_corona">5 Cara Efektif Agar Tidak Tertular Virus Corona</string>
    <string name="home_corona_deaths">Meninggal</string>
    <string name="home_corona_confirmed">Positif</string>
    <string name="home_corona_recovered">Sembuh</string>
    <string name="home_corona_whats_do">Apa yang harus kita lakukan?</string>
</resources>
