<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyMedium">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:elevation="3dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/wave_example" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLastUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:paddingRight="16dp"
                        android:text="Last Update: 12 Maret 2020 "
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/chartIndoesiaCases" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvConfirmedCasesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:fontFamily="@font/sansation_bold"
                        android:gravity="center_horizontal"
                        android:text="Data Di Indonesia"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <lecho.lib.hellocharts.view.PieChartView
                        android:id="@+id/chartIndoesiaCases"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="@id/guideLine"
                        app:layout_constraintTop_toBottomOf="@id/tvConfirmedCasesTitle" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideLine"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.55" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@id/chartIndoesiaCases"
                        app:layout_constraintLeft_toLeftOf="@id/chartIndoesiaCases"
                        app:layout_constraintRight_toRightOf="@id/chartIndoesiaCases"
                        app:layout_constraintTop_toTopOf="@id/chartIndoesiaCases">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCasesCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="12345" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Total"
                            android:textColor="@color/colorBlack" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:paddingVertical="16dp"
                        android:paddingLeft="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/chartIndoesiaCases"
                        app:layout_constraintLeft_toLeftOf="@id/guideLine"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvConfirmedCasesTitle">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvCountryRecovered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                tools:text="123456" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="14dp"
                                android:text="@string/home_corona_recovered"
                                android:textColor="@color/colorGreen"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvCountryConfirmed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                tools:text="123456" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="14dp"
                                android:text="@string/home_corona_confirmed"
                                android:textColor="@color/colorYellow"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvCountryDeaths"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                tools:text="123456" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_corona_deaths"
                                android:textColor="@color/colorRedDark"
                                android:textStyle="bold" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Daftar Provinsi"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="end"
                    android:text="Selengkapnya..."
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_province_list" />

            <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
                android:id="@+id/provinceIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                app:spi_dotSelectedColor="@color/spots_dialog_color"
                app:spi_dotSelectedSize="5dp"
                app:spi_dotSize="5dp" />

            <include layout="@layout/layout_whats_do" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>